# toolbox

./: .gitignore  Untitled.ipynb  Untitled2.ipynb  __init__.py  __setup.py  env.yml  environment.yml  requirements.txt  score_questionnaires.py  setup.cfg  setup.py  setup_unused.cfg
tests/: run_tests.py  test_angles.py
toolbox/: __init__.py  circ_stats.py  classification.py  correlation.py  dim_reduction.py  feature_selection.py  files.py  func_conn.py  general_utils.py  generic.py  geometry.py  images.py  io.py  masking.py  math.py  matrices.py  model_selection.py  mvpa.py  nlp.py  nonparametric.py  patterns.py  plotting.py  quality.py  regression.py  searchlight_example.py  searchlights.py  socialspace.py  splines.py  standard_modules.py  statistics.py  stats.py  tda.py  utils.py
toolbox/old/: circ_stats.py  topology.py  trajectories.py
tools/: __init__.py  mvpa.py
