[metadata]
name = toolbox
version = 0.0.6
author = matty g 
description = This is an example package
long_description = This is a longer description for the package
url = https://github.com/matty-gee/toolbox
keywords = sample, example, setuptools

[options]
packages = find:
install_requires = 
    astropy
    brainiak
    factor_analyzer
    matplotlib
    mpi4py # for brainiak
    networkx
    nibabel
    nose # for pycircstats
    numpy
    pandas
    patsy
    prince
    pycircstat
    scikit_learn
    scipy
    seaborn
    setuptools
    Shapely
    shapesimilarity
    six
    statsmodels
    torch
    xlsx2csv