[metadata]
name = toolbox
version = 0.0.12
author = matty g 
description = This is an example package
long_description = This is a longer description for the package
url = https://github.com/matty-gee/toolbox
keywords = sample, example, setuptools

[options]
packages = find:
install_requires = 
    astropy
    # brainiak
    # mpich
    # mpi4py # for brainiak
    factor_analyzer
    matplotlib
    networkx
    nilearn
    nibabel
    nose # for pycircstats
    numpy
    pandas
    patsy
    prince
    pycircstat
    scikit_learn
    scipy
    seaborn
    setuptools
    Shapely
    shapesimilarity
    six
    statsmodels
    torch
    xlsx2csv