[metadata]
name = toolbox
version = 0.0.14
author = Matthew G. Schafer 
description = A general set of tools for fMRI and behavioral analysis
long_description = placeholder
url = https://github.com/matty-gee/toolbox
keywords = fmri, behavior, data analysis

[options]
packages = find:
install_requires = 
    astropy
    # brainiak
    # mpich
    # mpi4py # for brainiak
    factor_analyzer
    matplotlib
    networkx
    nilearn
    nibabel
    nose # for pycircstats
    numpy
    pandas
    patsy
    prince
    pycircstat
    scikit_learn
    scipy
    seaborn
    setuptools
    Shapely
    shapesimilarity
    six
    statsmodels
    torch
    xlsx2csv